...
    'Bachelor of Early Childhood Education',
    'Bachelor of Elementary Education',
    'Bachelor of Secondary Education',
    
    // College of Computer Studies
    'Associate in Computer Technology',
    'Bachelor of Science in Computer Science',
    'Bachelor of Science in Computer Science (with Specialization in Artificial Intelligence)',
    'Bachelor of Science in Information Technology',
  ];

  // List of Basic Education levels (Grades 1-10)
  static const List<String> basicEducationLevels = [
...
